# idea-search

./: .gitignore  LICENSE  README.md  README_ja.md  charter.md  pyproject.toml
config/: default.yaml
docs/: architecture.md  hypothesis.md  limitations.md  providers.md
examples/: broad_goal_as_problem.json  goal_input.json  goal_input_ja.json  goal_input_user.json  sample_input.json
results/: 2026-04-18_agent_teams_poc.md  2026-04-18_embedding_similarity.md  2026-04-18_first_real_runs.md  2026-04-18_jaccard_sensitivity.md  2026-04-18_outside_signal_design.md  2026-04-18_outside_signal_design_ja.md  2026-04-18_phase2_plan_ja.md
scripts/: embedding_similarity.py  jaccard_sensitivity.py
src/idea_search/: __init__.py  __main__.py  baseline.py  charter.py  cli.py  clustering.py  compare.py  compare_report.py  controller.py  modes.py  reporter.py  schema.py  similarity.py
src/idea_search/archive/: __init__.py  store.py
src/idea_search/hierarchical/: __init__.py  branch_evaluator.py  branch_selector.py  controller.py  goal_decomposer.py  method_adapter.py  prompts.py  reporter.py  schema.py
src/idea_search/pipeline/: evaluator_pipeline.py  generator_pipeline.py
tests/: test_anthropic_provider.py  test_archive.py  test_baseline.py  test_branch_evaluator.py  test_branch_selector.py  test_charter.py  test_claude_cli_provider.py  test_clustering.py  test_compare.py  test_controller_e2e.py  test_evaluators.py  test_goal_decomposer.py  test_hierarchical_e2e.py  test_hierarchical_schema.py  test_method_adapter.py  test_mock_provider.py  test_similarity.py
(+10 files in other folders)
