[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-search"
version = "0.1.0"
description = "Multi-role idea search system with separated generators and evaluators"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kakineko" }]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
anthropic = [
    "anthropic>=0.39.0",
]
analysis = [
    "sentence-transformers>=2.7.0,<5.0",
    "scikit-learn>=1.3",
]

[project.scripts]
idea-search = "idea_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
